# routes/web.php
@@ -44,6 +44,33 @@ Route::get('search', 'SearchController@show')->name('search');
 Route::get('search/users', 'SearchController@searchUsers');
 Route::get('search/articles', 'SearchController@searchArticles');
 
+// Comments
+Route::post('comment', 'CommentController@create');
+Route::put('comment/{id}', 'CommentController@update')->where(['id' => '[0-9]+']);
+Route::delete('comment/{id}', 'CommentController@destroy')->where(['id' => '[0-9]+']);
+
+// Content
+Route::delete('content/{id}', 'ContentController@removeFeedback')->where(['id' => '[0-9]+']);
+Route::put('content/{id}', 'ContentController@giveFeedback')->where(['id' => '[0-9]+']);
+
+// Admin
+Route::get('admin', 'AdminController@show')->name('admin');
+Route::get('admin/suspensions', 'AdminController@suspensions');
+Route::post('user/{id}/suspend', 'AdminController@suspendUser')->where(['id' => '[0-9]+']);
+Route::put('user/{id}/unsuspend', 'AdminController@unsuspendUser')->where(['id' => '[0-9]+']);
+Route::get('admin/reports', 'AdminController@reports');
+Route::get('admin/topics', 'AdminController@topics');
+Route::put('admin/reports/{id}/close', 'AdminController@closeReport')->where(['id' => '[0-9]+']);
+
+// Topic
+Route::put('topics/{topic_id}/accept', 'TopicController@accept')->where(['topic_id' => '[0-9]+']);
+Route::put('topics/{topic_id}/reject', 'TopicController@reject')->where(['topic_id' => '[0-9]+']);
+Route::put('topics/{topic_id}/add_favorite', 'TopicController@addUserFavorite')->where(['topic_id' => '[0-9]+']);
+Route::put('topics/{topic_id}/remove_favorite', 'TopicController@removeUserFavorite')->where(['topic_id' => '[0-9]+']);
+Route::delete('topics/{topic_id}', 'TopicController@destroy')->where(['topic_id' => '[0-9]+']);
+Route::post('topics/new', 'TopicController@propose');
+
+
 //Static Pages
 Route::get('about', 'StaticPagesController@getAboutUs')->name('about');
 Route::get('faq', 'StaticPagesController@getFAQ')->name('faq');
